# arboria

./: .gitignore  CMakeLists.txt  README.MD  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
arboria/: __init__.py  _api.py  _decisiontree.py  _randomforest.py
docs/: arboria_demo.ipynb
docs/notes/: notes_split_logic.md
docs/source/: api.rst  class.rst  conf.py  index.rst
docs/source/api/: arboria.DecisionTree.rst  arboria.RandomForest.rst  arboria.accuracy.rst
python/arboria/: _api.py
src/: main.cpp
src/bindings/: bindings.cpp
src/dataset/: dataset.cpp  dataset.h
src/helpers/: helpers.h
src/node/: node.cpp  node.h
src/split_criterion/: entropy.h  gini.h  sse.h
src/split_strategy/: cart_threshold.h  split_result.h  split_stats.h  splitter.cpp  splitter.h
src/split_strategy/feature_selection/randomK/: randomK.cpp  randomK.h
src/split_strategy/sampling/: sampling.cpp  sampling.h
src/split_strategy/threshold/: cart_threshold.h
src/split_strategy/types/: split_context.h  split_hyper.h  split_param.h  split_result.h  split_stats.h
src/split_strategy/types/ParamBuilder/: ParamBuilder.cpp  ParamBuilder.h
src/tree/: TreeModel.h
src/tree/DecisionTree/: DecisionTree.cpp  DecisionTree.h
src/tree/RandomForest/: randomforest.cpp  randomforest.h
test_python/: test_accuracy.py  test_decision_tree.py  test_decision_tree_class.py  test_decision_tree_reg.py  test_random_forest.py  test_random_forest_class.py  test_random_forest_reg.py
test_python/perf/: arboria_perf.py  bench_results_4_tests_20260130_185031.csv  perf_log.md  plot_perf.py
test_python/perf/perf_logs/: perf_test_#1.md  perf_test_#2.md  perf_test_#3.md  perf_test_#4.md
tests/: CMakeLists.txt  test_access.cpp  test_access.h  test_best_split.cpp  test_cart_threshold.cpp  test_count.cpp  test_dataset.cpp  test_decisiontree.cpp  test_entropy.cpp  test_gini.cpp  test_node.cpp  test_randomK.cpp  test_random_forest.cpp  test_sampling.cpp
