[build-system]
requires = ["scikit-build-core>=0.7"]
build-backend = "scikit_build_core.build"

[project]
name = "arboria"
version = "0.1.0"
requires-python = ">=3.9"

[tool.scikit-build]
cmake.minimum-version = "3.16"
cmake.build-type = "Release"
cmake.define = { ARBORIA_BUILD_TESTS = "OFF" }
wheel.packages = ["arboria"]
